backend: middleware for jwt + aboutme route
